# TestTransfer

./: README.md  canister_ids.json  dfx.json
call/: Cargo.toml
call/src/: main.rs  transferTest_backend.did  transferTest_backend_did.rs
src/transferTest_backend/: Account.mo  Types.mo  main.mo
